--- a/www/plugin/calendar/index.html
+++ b/www/plugin/calendar/index.html
@@ -18,37 +18,37 @@
 		<!--
 		Persian Calendar
 		-->
-		<script type="text/javascript" src="/js/class.base.js"></script>
-		<script type="text/javascript" src="/js/class.sprite.js"></script>
-		<script type="text/javascript" src="/js/pcal.js"></script>
-		<script type="text/javascript" src="/js/view/toolbox.view.js"></script>
-		<script type="text/javascript" src="/js/toolbox.js"></script>
-		<script type="text/javascript" src="/js/stage.js"></script>
+		<script type="text/javascript" src="js/class.base.js"></script>
+		<script type="text/javascript" src="js/class.sprite.js"></script>
+		<script type="text/javascript" src="js/pcal.js"></script>
+		<script type="text/javascript" src="js/view/toolbox.view.js"></script>
+		<script type="text/javascript" src="js/toolbox.js"></script>
+		<script type="text/javascript" src="js/stage.js"></script>
 
-		<script type="text/javascript" src="/js/data.service.js"></script>
+		<script type="text/javascript" src="js/data.service.js"></script>
 
-		<script type="text/javascript" src="/js/view/page.day.view.js"></script>
-		<script type="text/javascript" src="/js/page.day.js"></script>
+		<script type="text/javascript" src="js/view/page.day.view.js"></script>
+		<script type="text/javascript" src="js/page.day.js"></script>
 
-		<script type="text/javascript" src="/js/view/grid.hours.view.js"></script>
-		<script type="text/javascript" src="/js/grid.hours.js"></script>
+		<script type="text/javascript" src="js/view/grid.hours.view.js"></script>
+		<script type="text/javascript" src="js/grid.hours.js"></script>
 
-		<script type="text/javascript" src="/js/view/page.year.view.js"></script>
-		<script type="text/javascript" src="/js/page.year.js"></script>
+		<script type="text/javascript" src="js/view/page.year.view.js"></script>
+		<script type="text/javascript" src="js/page.year.js"></script>
 
-		<script type="text/javascript" src="/js/view/grid.month.view.js"></script>
+		<script type="text/javascript" src="js/view/grid.month.view.js"></script>
 
-		<script type="text/javascript" src="/js/grid.month.js"></script>
+		<script type="text/javascript" src="js/grid.month.js"></script>
 
-		<script type="text/javascript" src="/js/page.month.js"></script>
-		<script type="text/javascript" src="/js/view/page.month.view.js"></script>
+		<script type="text/javascript" src="js/page.month.js"></script>
+		<script type="text/javascript" src="js/view/page.month.view.js"></script>
 
-		<script type="text/javascript" src="/js/page.week.js"></script>
+		<script type="text/javascript" src="js/page.week.js"></script>
 
-		<script type="text/javascript" src="/js/view/page.week.view.js"></script>
+		<script type="text/javascript" src="js/view/page.week.view.js"></script>
 
-		<script type="text/javascript" src="/js/page.month.js"></script>
-		<script type="text/javascript" src="/js/grid.week.js"></script>
+		<script type="text/javascript" src="js/page.month.js"></script>
+		<script type="text/javascript" src="js/grid.week.js"></script>
 		<script type="text/javascript" src="init.js"></script>
 		<script>
 			/*
