--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	</head>
 
 	<body>
-		
 
 		<!-- HEADER -->
 		<div id="header_wrap" class="outer">
@@ -29,20 +28,21 @@
 			</header>
 		</div>
 
-
 		<!-- MAIN CONTENT -->
 		<div id="main_content_wrap" class="outer">
 			<section id="main_content" class="inner">
 				<h3>Welcome to Persian Web Toolkit Pages.</h3>
-
+				<a href="/demo.html" >Live Demo</a>
 				<p>
 					This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:
 				</p>
 				<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>
+</code></pre>								
 				
+
+
 
 
 				<p>
@@ -58,16 +58,20 @@ $ git checkout gh-pages
 				<h3>Rather Drive Stick?</h3>
 
 				<p>
-					If you prefer to not use the automatic generator, push a branch named <code>
-						gh-pages</code>
+					If you prefer to not use the automatic generator, push a branch named
+					<code>
+						gh-pages
+					</code>
 					to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.
 				</p>
 
 				<h3>Authors and Contributors</h3>
 
 				<p>
-					You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>
-						&lt;a&gt;</code>
+					You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting
+					<code>
+						&lt;a&gt;
+					</code>
 					element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.
 				</p>
 
