--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div id="main_content_wrap" class="outer">
 			<section id="main_content" class="inner">
 				<h3>Welcome to Persian Web Toolkit Pages.</h3>
-				<a href="/demo.html" >Live Demo</a>
+				<a href="/PersianWTK/demo" >Live Demo</a>
 				<p>
 					This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:
 				</p>
