--- a/demo.html
+++ b/demo.html
@@ -1,19 +1,43 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta charset='utf-8' />
-		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
-		<meta name="description" content="Persianwtk : " />
-
-		<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-		<title>PersianWTK</title>
+		<title>Persian Calendar</title>
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		
+		<link rel="stylesheet" type="text/css"  href="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/page.css"  />
+		<link rel="stylesheet" type="text/css"  href="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/main.css" />
+		
+		<link rel="stylesheet" type="text/css"  href="stylesheets/date.picker.css" />
+		
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.tmpl.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/js/common.js"></script>
+		<!--
+		Persian Date
+		-->
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/js/persian.date.js"></script>
+		<!--
+		Persian Calendar
+		-->
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/class.base.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/class.sprite.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/view/p.datePicker.view.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/p.datePicker.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/view/grid.month.view.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/grid.month.js"></script>
 	</head>
-
 	<body>
-
-		this is demo page
-
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$(".datePicker").pDatePicker();
+			});
+		</script>
+		<div class="container" >
+			<input type="text" class="datePicker" value="09-23-2011" />
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+		</div>
 	</body>
 </html>
