--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="header_wrap" class="outer">
 			<header class="inner">
 				<a id="forkme_banner" href="https://github.com/babakhani/PersianWTK">View on GitHub</a>
-				<h1 id="project_title">Persianwtk</h1>
+				<h1 id="project_title">Persian WTK</h1>
 				<h2 id="project_tagline"></h2>
 				<section id="downloads">
 					<a class="zip_download_link" href="https://github.com/babakhani/PersianWTK/zipball/master">Download this project as a .zip file</a>
