--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div id="footer_wrap" class="outer">
 			<footer class="inner">
 				<p class="copyright">
-					Persianwtk maintained by <a href="https://github.com/babakhani">Reza Babakhani</a>
+					Persian WTK maintained by <a href="https://github.com/babakhani">Reza Babakhani</a>
 				</p>
 			</footer>
 		</div>
