--- a/demo.html
+++ b/demo.html
@@ -4,10 +4,8 @@
 		<title>Persian Calendar</title>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		
-		<link rel="stylesheet" type="text/css"  href="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/page.css"  />
-		<link rel="stylesheet" type="text/css"  href="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/main.css" />
-		
-		<link rel="stylesheet" type="text/css"  href="stylesheets/date.picker.css" />
+		<link rel="stylesheet" type="text/css"  href="https://rawgithub.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/page.css"  />
+		<link rel="stylesheet" type="text/css"  href="https://rawgithub.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/main.css" />
 		
 		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.tmpl.js"></script>
