--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset='utf-8' />
 		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
@@ -10,9 +9,7 @@
 
 		<title>PersianWTK</title>
 	</head>
-
 	<body>
-
 		<!-- HEADER -->
 		<div id="header_wrap" class="outer">
 			<header class="inner">
@@ -31,12 +28,20 @@
 			<section id="main_content" class="inner">
 				<h3>Welcome to Persian Web Toolkit Pages.</h3>
 				<h3>Coming soon</h3>
-				<p>Some Ui Tools Compatible With Persian Layout And Jalali Date Like:</p>
+				<p>
+					Some Ui Tools Compatible With Persian Layout And Jalali Date Like:
+				</p>
 				<ul>
-					<li>Persian Date Picker</li>
-					<li>Persian Calendar</li>
-					<li>...</li>
-				</ul>				
+					<li>
+						Persian Date Picker
+					</li>
+					<li>
+						Persian Calendar
+					</li>
+					<li>
+						...
+					</li>
+				</ul>
 		</div>
 		<!-- FOOTER  -->
 		<div id="footer_wrap" class="outer">
