--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,6 @@
 		Persian Calendar
 		-->
 		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/class.base.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/class.sprite.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/view/p.datePicker.view.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/p.datePicker.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/view/grid.month.view.js"></script>
@@ -27,7 +26,7 @@
 	<body>
 		<script type="text/javascript">
 			$(document).ready(function() {
-				$(".datePicker").pDatePicker();
+				$(".datePicker").pDatepicker();
 			});
 		</script>
 		<div class="container" >
