Add Some Picker For Test

--- a/demo.html
+++ b/demo.html
@@ -31,6 +31,16 @@
 		</script>
 		<div class="container" >
 			<input type="text" class="datePicker" value="09-23-2011" />
+			<br />
+			<br />
+			<br />
+			<br />
+			<input type="text" class="datePicker"  />
+			<br />
+			<br />
+			<br />
+			<br />
+			<input type="text" class="datePicker"  />
 			
 		</div>
 	</body>
