--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 				</p>
 				<ul>
 					<li>
-						<a href="babakhani.github.io/PersianWTK/persian_date"> Persian Date Object</a>
+						<a href="/persian_date"> Persian Date Object</a>
 						<ul>
-							<li><a href="babakhani.github.io/PersianWTK/persian_date_demo">Demo</a></li>
-							<li><a href="babakhani.github.io/PersianWTK/persian_date_demo">Document</a></li>
+							<li><a href="/persian_date_demo">Demo</a></li>
+							<li><a href="/persian_date_demo">Document</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="babakhani.github.io/PersianWTK/datepicker"> Persian Date Picker</a>
+						<a href="/datepicker"> Persian Date Picker</a>
 						<ul>
-							<li><a href="babakhani.github.io/PersianWTK/datepicker_demo">Demo</a></li>
-							<li><a href="babakhani.github.io/PersianWTK/datepicker_demo">Document</a></li>
+							<li><a href="/datepicker_demo">Demo</a></li>
+							<li><a href="/datepicker_demo">Document</a></li>
 						</ul>
 					</li>
 				</ul>
