--- a/www/plugin/date_picker/index.html
+++ b/www/plugin/date_picker/index.html
@@ -3,8 +3,11 @@
 	<head>
 		<title>Persian Calendar</title>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-		<link href="css/page.css" rel="stylesheet" type="text/css" />
+		<link href="css/page.css" rel="stylesheet" type="text/css" />		
+		<link href="css/test.css" rel="stylesheet" type="text/css" />
+		
 		<link href="css/persianDatepicker.css" rel="stylesheet" type="text/css" />
+		
 		<script type="text/javascript" src="../js/jquery/jquery.js"></script>
 		<script type="text/javascript" src="../js/jquery/jquery.tmpl.js"></script>
 		<script type="text/javascript" src="../js/common.js"></script>
