--- a/www/plugin/date_picker/index.html
+++ b/www/plugin/date_picker/index.html
@@ -5,15 +5,12 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<link href="css/page.css" rel="stylesheet" type="text/css" />		
 		<link href="css/test.css" rel="stylesheet" type="text/css" />
-		
 		<link href="css/persianDatepicker.css" rel="stylesheet" type="text/css" />
-		
+		<!-- Jquery -->
 		<script type="text/javascript" src="../js/jquery/jquery.js"></script>
-		<script type="text/javascript" src="../js/jquery/jquery.tmpl.js"></script>
-		<script type="text/javascript" src="../js/common.js"></script>
 		<!-- Persian Date -->
 		<script type="text/javascript" src="../js/persian.date.js"></script>
-		<!-- Persian Calendar -->
+		<!-- Persian DAtepicker -->
 		<script type="text/javascript" src="js/persianDatepicker.js"></script>
 	</head>
 	<body>
