--- a/datepicker.html
+++ b/datepicker.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/></head><link rel="stylesheet" href="https://rawgithub.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/persianDatepicker.css"/><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.tmpl.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/common.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/persian.date.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/persianDatepicker.js"></script><body><div id="header_wrap" class="outer">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="https://rawgithub.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/persianDatepicker.css"/><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.tmpl.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/common.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/persian.date.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/persianDatepicker.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWTK">View on GitHub</a>
 		<h1 id="project_title">Persian WTK</h1>
@@ -24,11 +24,14 @@
 		Attached to a field with the format specified via options.
 	</p>
 	<div class="well">
-		<input  type="text" class="span2" value="02-16-2012" id="example1">
+		<input  type="text" class="sample-input " value="02-16-2012" id="example1"  >
 
 		<script type="text/javascript" >
                   $(document).ready(function() {
-                        $("#example1").pDatepicker();
+                        $("#example1").pDatepicker({
+                        		persianDigit: false
+                        	
+                        });
                   });
 		</script>
 
@@ -38,7 +41,8 @@
 	<p>
 		Call the datepicker via javascript:
 	</p>
-	<pre class="prettyprint linenums"><ol class="linenums"><li class="L0"><span class="pln">$</span><span class="pun">(</span><span class="str">'.datepicker'</span><span class="pun">).</span><span class="pln">datepicker</span><span class="pun">()</span></li></ol></pre>
+	<pre class="prettyprint linenums">
+		<ol class="linenums"><li class="L0"><span class="pln">$</span><span class="pun">(</span><span class="str">'.datepicker'</span><span class="pun">).</span><span class="pln">pDatepicker</span><span class="pun">()</span></li></ol></pre>
 	<h3>Options</h3>
 	<table class="table table-bordered table-striped">
 		<thead>
@@ -51,59 +55,73 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>format</td>
+				<td>viewFormat</td>
 				<td>string</td>
 				<td>'mm/dd/yyyy'</td>
 				<td>the date format, combination of  d, dd, m, mm, yy, yyy.</td>
 			</tr>
 			<tr>
-				<td>weekStart</td>
-				<td>integer</td>
-				<td>0</td>
-				<td>day of the week start. 0 for Sunday -  6 for Saturday</td>
-			</tr>
-			<tr>
 				<td>viewMode</td>
-				<td>string|integer</td>
-				<td>0 = 'days'</td>
-				<td>set the start view mode. Accepts: 'days', 'months', 'years', 0 for days, 1 for months and 2 for years</td>
+				<td>string</td>
+				<td>day</td>
+				<td>day,month,year</td>
 			</tr>
 			<tr>
-				<td>minViewMode</td>
-				<td>string|integer</td>
-				<td>0 = 'days'</td>
-				<td>set a limit for view mode. Accepts: 'days', 'months', 'years', 0 for days, 1 for months and 2 for years</td>
+				<td>persianDigit</td>
+				<td>Boolean</td>
+				<td>true</td>
+				<td>if true all digit convert to persian digit.</td>
 			</tr>
+			<tr>
+				<td>position</td>
+				<td>Array</td>
+				<td>auto</td>
+				<td>[x,y] , define a position of datepicker relative to input element.</td>
+			</tr>
+			<tr>
+				<td>autoClose</td>
+				<td>Boolean</td>
+				<td>false</td>
+				<td>If true picker close When Select day </td>
+			</tr>
+			<tr>
+				<td>toolbox</td>
+				<td>Boolean</td>
+				<td>true</td>
+				<td>Show Hide toolbox element </td>
+			</tr>
+			<tr>
+				<td>mask</td>
+				<td>String | Intger</td>
+				<td>false</td>
+				<td>If Mask Set Datepicker add input hidden whit name of main input and set value for this on select date, acceptable value:  <strong>unix,gregorian</strong> </td>
+			</tr>
+			
+			<tr>
+				<td>viewFormatter</td>
+				<td>Function</td>
+				<td>--</td>
+				<td>format value of input<br/>
+					{...<br/>
+					viewFormatter: function(unixDate){return unixDate}<br/>
+					...}
+				</td>
+			</tr>
+			<tr>
+				<td>maskFormatter</td>
+				<td>Function</td>
+				<td>--</td>
+				<td>format value of mask input<br/>
+					{...<br/>
+					maskFormatter: function(unixDate){return unixDate}<br/>
+					...}
+				</td>
+			</tr>
+			
 		</tbody>
 	</table>
-
-	<h3>Markup</h3>
-	<p>
-		Format a component.
-	</p>
-	<pre class="prettyprint linenums"><ol class="linenums"><li class="L0"><span class="tag">&lt;div</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"input-append date"</span><span class="pln"> </span><span class="atn">id</span><span class="pun">=</span><span class="atv">"dp3"</span><span class="pln"> </span><span class="atn">data-date</span><span class="pun">=</span><span class="atv">"12-02-2012"</span><span class="pln"> </span><span class="atn">data-date-format</span><span class="pun">=</span><span class="atv">"dd-mm-yyyy"</span><span class="tag">&gt;</span></li><li class="L1"><span class="pln">  </span><span class="tag">&lt;input</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"span2"</span><span class="pln"> </span><span class="atn">size</span><span class="pun">=</span><span class="atv">"16"</span><span class="pln"> </span><span class="atn">type</span><span class="pun">=</span><span class="atv">"text"</span><span class="pln"> </span><span class="atn">value</span><span class="pun">=</span><span class="atv">"12-02-2012"</span><span class="tag">&gt;</span></li><li class="L2"><span class="pln">  </span><span class="tag">&lt;span</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"add-on"</span><span class="tag">&gt;&lt;i</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"icon-th"</span><span class="tag">&gt;&lt;/i&gt;&lt;/span&gt;</span></li><li class="L3"><span class="tag">&lt;/div&gt;</span></li></ol></pre>
-	<h3>Methods</h3>
-	<h4>.datepicker(options)</h4>
-	<p>
-		Initializes an datepicker.
-	</p>
-	<h4>.datepicker('show')</h4>
-	<p>
-		Show the datepicker.
-	</p>
-	<h4>.datepicker('hide')</h4>
-	<p>
-		Hide the datepicker.
-	</p>
-	<h4>.datepicker('place')</h4>
-	<p>
-		Updates the date picker's position relative to the element
-	</p>
-	<h4>.datepicker('setValue', value)</h4>
-	<p>
-		Set a new value for the datepicker. It cand be a string in the specified format or a Date object.
-	</p>
-
+		
+	<!--	
 	<h3>Events</h3>
 	<p>
 		Datepicker class exposes a few events for manipulating the dates.
@@ -135,4 +153,5 @@
 		</tbody>
 	</table>
 	<pre class="prettyprint linenums"><ol class="linenums"><li class="L0"><span class="pln">$</span><span class="pun">(</span><span class="str">'#dp5'</span><span class="pun">).</span><span class="pln">datepicker</span><span class="pun">()</span></li><li class="L1"><span class="pln">  </span><span class="pun">.</span><span class="pln">on</span><span class="pun">(</span><span class="str">'changeDate'</span><span class="pun">,</span><span class="pln"> </span><span class="kwd">function</span><span class="pun">(</span><span class="pln">ev</span><span class="pun">){</span></li><li class="L2"><span class="pln">    </span><span class="kwd">if</span><span class="pln"> </span><span class="pun">(</span><span class="pln">ev</span><span class="pun">.</span><span class="pln">date</span><span class="pun">.</span><span class="pln">valueOf</span><span class="pun">()</span><span class="pln"> </span><span class="pun">&lt;</span><span class="pln"> startDate</span><span class="pun">.</span><span class="pln">valueOf</span><span class="pun">()){</span></li><li class="L3"><span class="pln">      </span><span class="pun">....</span></li><li class="L4"><span class="pln">    </span><span class="pun">}</span></li><li class="L5"><span class="pln">  </span><span class="pun">});</span></li></ol></pre>
+	-->
 </div></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian WTK maintained by<a href="https://github.com/babakhani">Reza Babakhani</a></p></footer></div></body></html>
