--- a/datepicker.html
+++ b/datepicker.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="https://rawgithub.com/babakhani/PersianWTK/master/www/plugin/date_picker/css/persianDatepicker.css"/><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/jquery/jquery.tmpl.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/common.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/js/persian.date.js"></script><script src="http://raw.github.com/babakhani/PersianWTK/master/www/plugin/date_picker/js/persianDatepicker.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWTK">View on GitHub</a>
-		<h1 id="project_title">Persian WTK</h1>
+		<h3 id="project_title">Persian Web Toolkit</h3>
+			<!--
 		<section id="downloads">
 		<a class="zip_download_link" href="https://github.com/babakhani/PersianWTK/zipball/master">Download this project as a .zip file</a>
 		<a class="tar_download_link" href="https://github.com/babakhani/PersianWTK/tarball/master">Download this project as a tar.gz file</a>
 		</section>
+		-->
 	</header>
 </div>
 <div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><h2>Persian Date Picker</h2>
