--- a/persiandate.html
+++ b/persiandate.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/></head><link rel="stylesheet" href="css/menu.css"/><body><div id="header_wrap" class="outer">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/></head><link rel="stylesheet" href="css/menu.css"/><script src="http://raw.github.com/babakhani/PersianWebToolkit/master/www/js/persian.date.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWTK">View on GitHub</a>
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
