Continu Refactor All Test Passed

--- a/www/plugin/date_picker/js/persianDatepicker.html
+++ b/www/plugin/date_picker/js/persianDatepicker.html
@@ -199,6 +199,171 @@ String.prototype.toPersianDigit = function(a) {
             return peDigitArr.join('');
       });
 };
+
+Class_DateRange = {
+      monthRange : {
+            1 : {
+                  name : {
+                        fa : "فروردین"
+                  },
+                  abbr : {
+                        fa : "فرو"
+                  }
+            },
+            2 : {
+                  name : {
+                        fa : "اردیبهشت"
+                  },
+                  abbr : {
+                        fa : "ارد"
+                  }
+            },
+            3 : {
+                  name : {
+                        fa : "خرداد"
+                  },
+                  abbr : {
+                        fa : "خرد"
+                  }
+            },
+            4 : {
+                  name : {
+                        fa : "تیر"
+                  },
+                  abbr : {
+                        fa : "تیر"
+                  }
+            },
+            5 : {
+                  name : {
+                        fa : "مرداد"
+                  },
+                  abbr : {
+                        fa : "مرد"
+                  }
+            },
+            6 : {
+                  name : {
+                        fa : "شهریور"
+                  },
+                  abbr : {
+                        fa : "شهر"
+                  }
+            },
+            7 : {
+                  name : {
+                        fa : "مهر"
+                  },
+                  abbr : {
+                        fa : "مهر"
+                  }
+            },
+            8 : {
+                  name : {
+                        fa : "آبان"
+                  },
+                  abbr : {
+                        fa : "آبا"
+                  }
+
+            },
+            9 : {
+                  name : {
+                        fa : "آذر"
+                  },
+                  abbr : {
+                        fa : "آذر"
+                  }
+            },
+            10 : {
+                  name : {
+                        fa : "دی"
+                  },
+                  abbr : {
+                        fa : "دی"
+                  }
+            },
+            11 : {
+                  name : {
+                        fa : "بهمن"
+                  },
+                  abbr : {
+                        fa : "بهم"
+                  }
+            },
+            12 : {
+                  name : {
+                        fa : "اسفند"
+                  },
+                  abbr : {
+                        fa : "اسف"
+                  }
+            }
+      }, weekRange : {
+            0 : {
+                  name : {
+                        fa : "شنبه"
+                  },
+                  abbr : {
+                        fa : "ش"
+                  }
+            },
+            1 : {
+                  name : {
+                        fa : "یکشنبه"
+                  },
+                  abbr : {
+                        fa : "ی"
+                  }
+            },
+            2 : {
+                  name : {
+                        fa : "دوشنبه"
+                  },
+                  abbr : {
+                        fa : "د"
+                  }
+            },
+            3 : {
+                  name : {
+                        fa : "سه شنبه"
+                  },
+                  abbr : {
+                        fa : "س"
+                  }
+            },
+            4 : {
+                  name : {
+                        fa : "چهار شنبه"
+                  },
+                  abbr : {
+                        fa : "چ"
+                  }
+            },
+            5 : {
+                  name : {
+                        fa : "پنج شنبه"
+                  },
+                  abbr : {
+                        fa : "پ"
+                  }
+            },
+            6 : {
+                  name : {
+                        fa : "جمعه"
+                  },
+                  abbr : {
+                        fa : "ج"
+                  }
+            }
+      }, persianDaysName : ["اورمزد", "بهمن", "اوردیبهشت", "شهریور", "سپندارمذ", "خورداد", "امرداد", "دی به آذز", "آذز", "آبان", "خورشید", "ماه", "تیر", "گوش", "دی به مهر", "مهر", "سروش", "رشن", "فروردین", "بهرام", "رام", "باد", "دی به دین", "دین", "ارد", "اشتاد", "آسمان", "زامیاد", "مانتره سپند", "انارام", "زیادی"]};
+
+
+
+
+
+
+
 var Views_MonthGrid = {
 	cssClass : {
 		main : "month-grid-box",
@@ -749,7 +914,7 @@ var MonthGrid = function(options) {
             $(this).each(function() {
                   this.pDatePicker = new pDatepicker(options, this);
             });
-            return this.pDatePicker;
+            return this;
       };
 })(jQuery);
 
@@ -884,6 +1049,6 @@ var pDatepicker = function(options, mainElem) {
       var viewName = 'default';
       this.view = this.views[viewName];
       this.raiseEvent('render');
-      return this.view.render(this);
+      this.view.render(this);
       return this;
 };
