--- a/datepicker.html
+++ b/datepicker.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><script src="js/jquery.js"></script><script src="js/pwt.date.js"></script><script src="js/pwt.datepicker.js"></script><body><div id="header_wrap" class="outer">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWebToolkit">View on GitHub</a>
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
@@ -25,11 +25,15 @@
 <br/>
 <br/>
 <h4>Dependency :</h4>
-<a href="js/pwt.date.js" download="pwt.date.js" >Download pwt.date.js</a>
+<a href="http://jquery.org"  >jquery.js </a>1.4 >
+<br/>
+Client Side Persain Date library :
+<br/>
+<a href="js/persainDate.js" download="persainDate.js" >persianDate.js </a>0.1.6 >
 <h4>Script :</h4>
-<a href="js/pwt.datepicker.js" download="pwt.datepicker.js" >Download pwt.datepicker.js</a>
+<a href="js/pwt.datepicker.js" download="pwt.datepicker.js" >pwt.datepicker.js</a>
 <h4>Style :</h4>
-<a href="css/pwt.datepicker.css" download="pwt.datepicker.css" >Download pwt.datepicker.css</a>
+<a href="css/pwt.datepicker.css" download="pwt.datepicker.css" >pwt.datepicker.css</a>
 <br/>
 <div >
 	<h2>Example</h2>
