Add Download Link > datepicker doc

--- a/datepicker.html
+++ b/datepicker.html
@@ -28,10 +28,8 @@
 Client Side Persain Date library :
 <br/>
 <a href="js/persainDate.js" download="persainDate.js" >persianDate.js </a>0.1.6 >
-<h4>Script :</h4>
-<a href="js/pwt.datepicker.js" download="pwt.datepicker.js" >pwt.datepicker.js</a>
-<h4>Style :</h4>
-<a href="css/pwt.datepicker.css" download="pwt.datepicker.css" >pwt.datepicker.css</a>
+<h4>Download :</h4>
+	<a href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >Download</a>
 <br/>
 <div >
 	<h2>Example</h2>
@@ -44,8 +42,7 @@ Client Side Persain Date library :
 		<script type="text/javascript" >
                   $(document).ready(function() {
                         $("#example1").pDatepicker({
-                        		persianDigit: false
-                        	
+                        		
                         });
                   });
 		</script>
