--- a/datepicker.html
+++ b/datepicker.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><body><div id="header_wrap" class="outer">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
@@ -14,6 +14,13 @@
 </div>
 <div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><h2>Persian Date Picker</h2>
 
+<script>
+	$(document).ready(function(){
+		prettyPrint();
+	})
+	
+</script>
+
 <p>
 	This Date picker work with Iranian calendar .
 </p>
@@ -28,8 +35,9 @@
 Client Side Persain Date library :
 <br/>
 <a href="js/persainDate.js" download="persainDate.js" >persianDate.js </a>0.1.6 >
-<h4>Download :</h4>
-	<a href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >Download</a>
+<h4>
+	<a href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >Download</a>	
+</h4>
 <br/>
 <div >
 	<h2>Example</h2>
@@ -38,7 +46,6 @@ Client Side Persain Date library :
 	</p>
 	<div class="well">
 		<input  type="text" class="sample-input " value="02-16-2012" id="example1"  >
-
 		<script type="text/javascript" >
                   $(document).ready(function() {
                         $("#example1").pDatepicker({
@@ -50,11 +57,29 @@ Client Side Persain Date library :
 	</div>
 	
 	<h2>Using persianDatepicker.js</h2>
-	<p>
-		Call the datepicker via javascript:
-	</p>
-	<pre class="prettyprint linenums">
-		<ol class="linenums"><li class="L0"><span class="pln">$</span><span class="pun">(</span><span class="str">'.datepicker'</span><span class="pun">).</span><span class="pln">pDatepicker</span><span class="pun">()</span></li></ol></pre>
+	
+	
+	<h3>Qiuck Start</h3>
+	
+	<pre class="prettyprint lang-html">
+		&lt;head&gt;
+			&lt;link rel="stylesheet" href="css/pwt.datepicker.css"/&gt;
+			&lt;script src="js/jquery.js"&gt;&lt;/script&gt;
+			&lt;script src="js/persainDate.js"&gt;&lt;/script&gt;
+			&lt;script src="js/pwt.datepicker.js"&gt;&lt;/script&gt;
+		&lt;/head&gt;
+		...
+		&lt;script type="text/javascript"&gt;
+			$(document).ready(function() {
+		            $("#example1").pDatepicker();
+            		});
+		&lt;/script&gt;
+		...
+		&lt;body&gt;
+			&lt;div class="example1" /&gt;
+		&lt;/body&gt;
+	</pre>
+	
 	
 	<h3>Options</h3>
 	<table class="table table-bordered table-striped">
