--- a/datepicker.html
+++ b/datepicker.html
@@ -68,16 +68,13 @@ Client Side Persain Date library :
 			&lt;script src="js/persainDate.js"&gt;&lt;/script&gt;
 			&lt;script src="js/pwt.datepicker.js"&gt;&lt;/script&gt;
 		&lt;/head&gt;
-		...
+		
 		&lt;script type="text/javascript"&gt;
 			$(document).ready(function() {
 		            $("#example1").pDatepicker();
             		});
 		&lt;/script&gt;
-		...
-		&lt;body&gt;
-			&lt;div class="example1" /&gt;
-		&lt;/body&gt;
+		&lt;input type="text" class="example1" /&gt;
 	</pre>
 	
 	
