--- a/datepicker.html
+++ b/datepicker.html
@@ -22,7 +22,7 @@
 
 
 <div class="page-title-box" >
-	<h2>Persian Date Picker  </h2>
+	<h2>Date Picker  </h2>
 	<h3>Version 0.0.2 </h3>
 	<p>
 		This Date picker work with Iranian calendar .
@@ -79,7 +79,7 @@
 		
 		&lt;script type="text/javascript"&gt;
 			$(document).ready(function() {
-		            $("#example1").pDatepicker();
+		            $(".example1").pDatepicker();
             		});
 		&lt;/script&gt;
 		&lt;input type="text" class="example1" /&gt;
