--- a/datepicker.html
+++ b/datepicker.html
@@ -23,14 +23,14 @@
 
 <div class="page-title-box" >
 	<h2>Date Picker  </h2>
-	<h3>Version 0.0.2 </h3>
+	<h5 class="warning-version" >Beta Version 0.0.2 </h5>
 	<p>
 		This Date picker work with Iranian calendar .
 	</p>
-	<span>More info  at:</span>
+	<span>More info  at</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 	
-	<h4>Dependency :</h4>
+	<h4>Dependency </h4>
 	<a href="http://jquery.org"  >jquery.js </a>1.4 >
 	<br/>
 	Client Side Persain Date library :
