--- a/datepicker.html
+++ b/datepicker.html
@@ -42,7 +42,7 @@
 	
 		<a class="download-item"  href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >
 			<span class="download-zip"  ></span>
-			<span class="download-zip-title" >Download Zip <span class="download-info" >From Github<br/> 103 kb</span></span>		
+			<span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span>		
 		</a>
 	
 </div>
