--- a/layout.html
+++ b/layout.html
@@ -12,4 +12,4 @@
 		-->
 	</header>
 </div>
-<div id="main_content_wrap" class="outer"></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian WTK maintained by<a href="https://github.com/babakhani">Reza Babakhani</a></p></footer></div></body></html>
+<div id="main_content_wrap" class="outer"></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a></p></footer></div></body></html>
