--- a/persiandate.html
+++ b/persiandate.html
@@ -1149,4 +1149,4 @@ persianDate.ispersianDate(persianDate()) <span class="comment">// true</span>
 	</div>
 </article>
 
-</section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian WTK maintained by<a href="https://github.com/babakhani">Reza Babakhani</a></p></footer></div></body></html>
+</section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a></p></footer></div></body></html>
