--- a/datepicker.html
+++ b/datepicker.html
@@ -166,4 +166,4 @@
 			</tr>
 		</tbody>
 	</table>
-</div></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian WTK maintained by<a href="https://github.com/babakhani">Reza Babakhani</a></p></footer></div></body></html>
+</div></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a></p></footer></div></body></html>
