--- a/datepicker.html
+++ b/datepicker.html
@@ -1,8 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" /></head><link rel="stylesheet" href="css/datepicker.css"/><link rel="stylesheet" href="css/pwt.datepicker.css"/><link rel="stylesheet" href="js/prettify/theme/desert.css"/><script src="js/jquery.js"></script><script src="js/persainDate.js"></script><script src="js/pwt.datepicker.js"></script><script src="js/prettify/prettify.js"></script><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
 		</a>
+		
+		<div class="page-git-star-btn" >
+			<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianWebToolkit&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
+		</div>
+		<div class="page-gplus-btn" >
+			<div class="g-plusone" data-size="tall" data-annotation="none"></div>
+		</div>
+		<script type="text/javascript">
+		  (function() {
+		    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+		    po.src = 'https://apis.google.com/js/plusone.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		</script>
+		
 		<!--
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWebToolkit">View on GitHub</a>
 		<section id="downloads">
@@ -30,7 +46,7 @@
 	<span>More info  at</span>
 	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
 	
-	<h4>Dependency </h4>
+	<h3>Dependency </h3>
 	<a href="http://jquery.org"  >jquery.js </a>1.4 >
 	<br/>
 	Client Side Persain Date library :
@@ -50,7 +66,7 @@
 <br/>
 <br/>
 <div class="page-content-box" >
-	<h2>Example</h2>
+	<h3>Example</h3>
 	<p>
 		Attached to a field with the format specified via options.
 	</p>
@@ -65,9 +81,6 @@
 		</script>
 
 	</div>
-
-	<h2>Using pwt.datepicker.js</h2>
-
 	<h3>Qiuck Start</h3>
 	<pre class="prettyprint lang-html">
 		&lt;head&gt;
