--- a/layout.html
+++ b/layout.html
@@ -1,8 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"></head><body><div id="header_wrap" class="outer">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" /></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
 		</a>
+		
+		<div class="page-git-star-btn" >
+			<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianWebToolkit&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
+		</div>
+		<div class="page-gplus-btn" >
+			<div class="g-plusone" data-size="tall" data-annotation="none"></div>
+		</div>
+		<script type="text/javascript">
+		  (function() {
+		    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+		    po.src = 'https://apis.google.com/js/plusone.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		</script>
+		
 		<!--
 		<a id="forkme_banner" href="https://github.com/babakhani/PersianWebToolkit">View on GitHub</a>
 		<section id="downloads">
