--- a/search.html
+++ b/search.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><link rel="stylesheet" href="css/pages.css"/><link rel="stylesheet" href="css/stylesheet.css"/><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-<link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" /></head><body><div id="header_wrap" class="outer">
+<link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
+<meta name="description" content="javascript,datepicker,date,persian,calendar">
+<meta name="keywords" content="javascript,datepicker,date,persian,calendar"></head><body><div id="header_wrap" class="outer">
 	<header class="inner">
 		<a href="http://babakhani.github.io/PersianWebToolkit/" >
 			<h3 id="project_title">Persian Web Toolkit</h3>
@@ -40,4 +42,7 @@
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search></gcse:search></section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a></p></footer></div></body></html>
+<gcse:search></gcse:search>
+
+
+</section></div></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a></p></footer></div></body></html>
